tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/uninitialized_use_before_declare_deci32.fg
/; EXPECT_ERROR: VariableNotFound
print(x, "\n")
const x:deci32 = 5.2f

